--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   build:
+    name: Playlist Puller Build
     runs-on: ubuntu-latest
 
     strategy:
@@ -16,16 +17,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - name: Setup with Node.js ${{ matrix.node-version }}
+      # uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci --only=production
     - run: npm run build --if-present
     - run: npm test
-    
+
   deploy:
-    name: Puller CI Deploy
+    name: Playlist Puller Deploy
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: testing secret print
