--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,10 @@ jobs:
       # uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci --only=production
-    - run: npm run build --if-present
-    - run: npm test
+    - run: |
+      npm ci --only=production
+      npm run build --if-present
+      npm test
 
   deploy:
     name: Playlist Puller Deploy
