--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: |
-      npm ci --only=production
+      npm ci --production
       npm run build --if-present
       npm test
 
