--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Playlist Puller Build
+    
     runs-on: ubuntu-latest
 
     strategy:
@@ -21,13 +21,12 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: |
-        npm ci --production
-        npm run build --if-present
-        npm test
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
 
   deploy:
-    name: Playlist Puller Deploy
+    
     needs: build
     runs-on: ubuntu-latest
     steps:
