--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: |
-        npm ci
-        npm run build --if-present
-        npm test --if-present
+    - run: npm ci
+        # npm run build --if-present
+        # npm test --if-present
 
   # deploy:
   #   needs: [build]
