--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - run: npm ci
+    - uses: actions/checkout@v2
+    - name: Setup Node
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.x
+    - run: ls -la
         # npm run build --if-present
         # npm test --if-present
 
