--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Setup Node
       uses: actions/setup-node@v1
       with:
-        node-version: 14.x
+        node-version: 14.15.5
     - run: ls -la
         # npm run build --if-present
         # npm test --if-present
