--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,37 @@
 name: Puller Node CI
 
-on: [push]
+on:
+  push:
+    branches: [ $default-branch ]
+  pull_request:
+    branches: [ $default-branch ]
 
 jobs:
   build:
+    
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup Node
-      uses: actions/setup-node@v1
+    - name: Setup with Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
       with:
-        node-version: 14.15.x
-    - run: ls -la
-        # npm run build --if-present
-        # npm test --if-present
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
 
-  # deploy:
-  #   needs: [build]
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #   - name: testing secret print
-  #     env:
-  #       CLIENT_ID: ${{ secrets.CLIENT_ID }}
-  #       CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-  #     run: npm run dev
+  deploy:
+    
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+    - name: testing secret print
+      env:
+        CLIENT_ID: ${{ secrets.CLIENT_ID }}
+        CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      run: npm run dev
