--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "request": "~2.83.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "prettier": "^2.2.1"
   }
 }
