--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
   "version": "0.0.2",
   "scripts": {
-    "dev": "node --inspect authorization_code/app.js"
+    "dev": "node --inspect authorization_code/app.js",
+    "start": "node authorization_code/app.js"
   },
   "dependencies": {
     "cookie-parser": "^1.4.5",
