update pkg.json engine

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "author": "Spotify",
-  "name": "web-api-auth-examples",
+  "author": "Nick",
+  "name": "test",
   "description": "Basic examples of the Spotify authorization flows through OAuth 2",
-  "version": "0.0.2",
+  "version": "0.0.1",
+  "engines": {
+    "node": "14"
+  },
   "scripts": {
     "dev": "node --inspect authorization_code/app.js",
     "start": "node authorization_code/app.js"
